--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "expo": "~46.0.16",
+    "expo-font": "^11.0.1",
     "expo-linear-gradient": "^11.4.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
